# assigner

./: .gitignore  LICENSE  README.md  assigner.cabal  assignment2.tex  students.csv
output/: genAss2.sh
src/: Main.hs
