name:                assigner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/assigner#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable assigner
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , text >= 1.2
                       , bytestring >= 0.10
                       , cryptohash >= 0.11
                       , random >= 1.0
                       , random-shuffle >= 0.0.4
